# test

./: .gitmodules  CMakeLists.txt  main.cpp
headers/: Array.h  mathh.h
sources/: Array.cpp  mathh.cpp
